--- a/index.html
+++ b/index.html
@@ -3,6 +3,6 @@
 <title>RODRIGUES.COM.AR</title>
 </head>
 <body>
-<h1>NADA POR AQUI</h1>
+<h1>HOLA, ESTA ES LA PAGINA DE JULI</h1>
 </body>
 </html>
